[Feat] 문제집 추가 기능 추가(하드코딩) #9

--- a/OnlineJudgeFE/Dockerfile
+++ b/OnlineJudgeFE/Dockerfile
@@ -1,5 +1,8 @@
-# 베이스 이미지 (Node.js LTS 버전)
-FROM node:16
+# 베이스 이미지 (Node.js 16 LTS 버전)
+FROM node:16-alpine
+
+# git 설치 (npm install에 필요)
+RUN apk add --no-cache git
 
 # 작업 디렉토리 생성
 WORKDIR /app
@@ -13,9 +16,17 @@ RUN npm install
 # 앱 소스 복사
 COPY . .
 
+# DLL 빌드 실행
+RUN npm run build:dll
+
 # 환경변수 설정
 ENV TARGET=http://oj-backend:8000
 ENV PORT=3000
+ENV NODE_ENV=development
+ENV HOST=0.0.0.0
 
-# 개발 서버 실행 명령
+# 포트 노출
+EXPOSE 3000
+
+# 개발 서버 실행 명령 (호스트 바인딩 추가)
 CMD ["npm", "run", "dev"]
