--- a/OnlineJudgeFE/deploy/nginx.conf
+++ b/OnlineJudgeFE/deploy/nginx.conf
@@ -100,7 +100,7 @@ http {
         location /api {
             proxy_pass http://oj-backend:8080;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header Host $http_host;
+            proxy_set_header Host $host;
             client_max_body_size 200M;
         }
         location /admin {
