--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -1,5 +1,8 @@
 services:
   oj-frontend:
+    networks:
+      - judge-network
+    platform: linux/amd64
     build:
       context: ./OnlineJudgeFE
       args:
@@ -10,6 +13,7 @@ services:
     env_file: .env
     environment:
       - TARGET=http://oj-backend:8000
+      - TARGET_HOST=judge.walab.info
       - PORT=8080
       - VUE_APP_GOOGLE_CLIENT_ID=${VUE_APP_GOOGLE_CLIENT_ID}
       - VUE_APP_GOOGLE_CLIENT_SECRET=${VUE_APP_GOOGLE_CLIENT_SECRET}
@@ -18,20 +22,24 @@ services:
       - "8080"
     depends_on:
       - oj-backend
-    ports:
-      - "0.0.0.0:8080:8080"
 
   oj-redis:
+    networks:
+      - judge-network
+    platform: linux/amd64
     image: redis:4.0-alpine
     restart: always
     volumes:
       - ./data/redis:/data
 
   oj-judge:
+    networks:
+      - judge-network
+    platform: linux/amd64
     image: registry.cn-hongkong.aliyuncs.com/oj-image/judge:1.6.1
     restart: always
     env_file: .env
-    # cpuset: "15"
+    cpuset: "15"
     deploy:
       resources:
         limits:
@@ -57,10 +65,13 @@ services:
       TOKEN: ${JUDGE_SERVER_TOKEN}
 
   oj-judge-2:
+    networks:
+      - judge-network
+    platform: linux/amd64
     image: registry.cn-hongkong.aliyuncs.com/oj-image/judge:1.6.1
     restart: always
     env_file: .env
-    # cpuset: "16"
+    cpuset: "16"
     deploy:
       resources:
         limits:
@@ -86,10 +97,13 @@ services:
       TOKEN: ${JUDGE_SERVER_TOKEN}
 
   oj-judge-3:
+    networks:
+      - judge-network
+    platform: linux/amd64
     image: registry.cn-hongkong.aliyuncs.com/oj-image/judge:1.6.1
     restart: always
     env_file: .env
-    # cpuset: "17"
+    cpuset: "17"
     deploy:
       resources:
         limits:
@@ -115,10 +129,13 @@ services:
       TOKEN: ${JUDGE_SERVER_TOKEN}
   
   oj-judge-4:
+    networks:
+      - judge-network
+    platform: linux/amd64
     image: registry.cn-hongkong.aliyuncs.com/oj-image/judge:1.6.1
     restart: always
     env_file: .env
-    # cpuset: "18"
+    cpuset: "18"
     deploy:
       resources:
         limits:
@@ -144,10 +161,13 @@ services:
       TOKEN: ${JUDGE_SERVER_TOKEN}
   
   oj-judge-5:
+    networks:
+      - judge-network
+    platform: linux/amd64
     image: registry.cn-hongkong.aliyuncs.com/oj-image/judge:1.6.1
     restart: always
     env_file: .env
-    # cpuset: "19"
+    cpuset: "19"
     deploy:
       resources:
         limits:
@@ -173,6 +193,11 @@ services:
       TOKEN: ${JUDGE_SERVER_TOKEN}
 
   oj-backend:
+    networks:
+      - judge-network
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    platform: linux/amd64
     build: ./OnlineJudge
     restart: always
     depends_on:
@@ -187,10 +212,18 @@ services:
     env_file: .env
     environment:
       - POSTGRES_HOST=${POSTGRES_HOST}
-      - POSTGRES_PORT=${POSTGRES_PORT}
+      - POSTGRES_PORT=5432
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - JUDGE_SERVER_TOKEN=${JUDGE_SERVER_TOKEN}
       - REDIS_HOST=oj-redis
       - REDIS_PORT=6379
+      - ALLOWED_HOSTS=*
+      - CSRF_TRUSTED_ORIGINS=http://judge.walab.info,https://judge.walab.info  
+      - USE_X_FORWARDED_HOST=true
+
+networks:
+  judge-network:
+    external: true
+    name: judge-network
