feat: implement code auto save

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,6 +107,8 @@ services:
       - DB_HOST=${POSTGRES_HOST}
       - DB_PORT=${POSTGRES_PORT}
       - DB_NAME=${POSTGRES_DB}
+      - CODE_SAVE_TTL_SECONDS=5
+      - REDIS_CODE_SAVE_PREFIX=ms:autosave
     volumes:
       - ./data/backend/test_case:/test_case:rw 
     depends_on:
