--- a/micro-service-server/Dockerfile
+++ b/micro-service-server/Dockerfile
@@ -4,5 +4,8 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir --index-url https://pypi.org/simple/ -r requirements.txt
 
 COPY . .
+
+RUN chmod +x ./entrypoint.sh
+
 EXPOSE 8000
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["./entrypoint.sh"]
