--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Build front page
+        run: |
+          cd ./hgu-oj-front
+          echo "VITE_API_URL=${{ vars.VITE_API_URL }}" >> .env
+          echo "VITE_MS_API_BASE=${{ vars.VITE_MS_API_BASE }}" >> .env
+          echo "VITE_CODE_AUTO_SAVE_INTERVAL_SECONDS=${{ vars.VITE_CODE_AUTO_SAVE_INTERVAL_SECONDS }}" >> .env
+          echo "VITE_CODE_AUTO_SAVE_CACHE_TTL_SECONDS=${{ vars.VITE_CODE_AUTO_SAVE_CACHE_TTL_SECONDS }}" >> .env
+          npm install
+          npm run build
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -30,7 +40,16 @@ jobs:
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/oj-backend:latest
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/oj-micro-service:latest
 
-      - name: Deploy on server
+      - name: Deploy frontend on server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          password: ${{ secrets.SERVER_PASSWORD }}
+          source: "./hgu-oj-front/dist/*"
+          target: "~/www/judge"
+
+      - name: Deploy backend on server
         uses: appleboy/ssh-action@v1.1.0
         with:
           host: ${{ secrets.SERVER_HOST }}
