hotfix: fix ci file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
       - name: Build front page
         run: |
           cd ./hgu-oj-front
@@ -21,7 +26,8 @@ jobs:
           echo "VITE_MS_API_BASE=${{ vars.VITE_MS_API_BASE }}" >> .env
           echo "VITE_CODE_AUTO_SAVE_INTERVAL_SECONDS=${{ vars.VITE_CODE_AUTO_SAVE_INTERVAL_SECONDS }}" >> .env
           echo "VITE_CODE_AUTO_SAVE_CACHE_TTL_SECONDS=${{ vars.VITE_CODE_AUTO_SAVE_CACHE_TTL_SECONDS }}" >> .env
-          npm install
+          npm ci
+          npm install -D @types/node
           npm run build
 
       - name: Set up Docker Buildx
