--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,7 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           source: "./hgu-oj-front/dist/*"
           target: "~/www/judge"
+          strip_components: 3
 
       - name: Deploy backend on server
         uses: appleboy/ssh-action@v1.1.0
