--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,9 +57,9 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SERVER_PASSWORD }}
-          source: "./hgu-oj-front/dist/*"
+          source: "hgu-oj-front/dist/*"
           target: "~/www/judge"
-          strip_components: 3
+          strip_components: 2
 
       - name: Deploy backend on server
         uses: appleboy/ssh-action@v1.1.0
