--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -185,6 +185,7 @@ services:
       - oj-judge-5
     volumes:
       - ./data/backend:/data
+      - ./data/backend/log:/data/log
     env_file: .env
     environment:
       - POSTGRES_HOST=${POSTGRES_HOST}
@@ -225,6 +226,7 @@ services:
       - 'REDIS_CODE_SAVE_PREFIX=ms:autosave'
     volumes:
       - ./data/backend/test_case:/test_case:rw
+      - ./data/micro_service/log:/log
     depends_on:
       - oj-redis
       - oj-backend
